# apostrof

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootsector.asm  build.sh  build_test.sh  clean.sh  compile_iso.sh  config.sh  debug.sh  debug_info.txt  fs_converter.js  fs_data.bin.bak  linker.ld  test.bat  test.iso  test.sh  test.txt  test_fs.js
apolib/: Makefile
apolib/include/: apostrof.h
apolib/src/: dbg.c  main.c  util.c
apps/shell/: Makefile
apps/shell/src/: main.c
apps/terminal/: Makefile  linker.ld
apps/terminal/src/: main.c  terminal.c  terminal.h
apps/test_app/: Makefile  linker.ld
apps/test_app/src/: header.asm  main.c
apps/test_app2/: Makefile
apps/test_app2/src/: main.c
backup/: linker.ld  shell.c
backup/boot/: header.asm
fs/: terminal  test_app  test_app2  test_file.txt
fs/test/: app  app.asm  task  task.asm
fs/test_dir/: cool.txt  yooooo
iso/: test_app  test_app2
iso/boot/grub/: grub.cfg
src/boot/: header.asm  main.asm
src/kernel/: dbg.c  dbg.h  error.c  error.h  gdt.c  gdt.h  gdt_a.asm  io.h  kmm.c  kmm.cpp  kmm.h  kmm.hpp  main.c  main.cpp  utils.c  utils.cpp  utils.h  utils.hpp  vga.c  vga.cpp  vga.h  vmem.c  vmem.h
src/kernel/app/: shell.c  shell.h
src/kernel/cpu/: cpuid.c  cpuid.h  cpuid_a.asm
src/kernel/drv/: drive.c  drive.h  gpt.c  gpt.h  ide.c  ide.h  keyboard.c  keyboard.h  keys.c  keys.h  pci.c  pci.h  pci_classes.c  pci_classes.h  pci_devices.c  pci_devices.h  storage.c  storage.h  timer.c  timer.h
src/kernel/fs/: apofs.c  apofs.h  filesystem.cpp  filesystem.hpp  iso9660.c  iso9660.cpp  (+2 more)
(+25 files in other folders)
